# FFTViewer

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: gui.hpp  main.cpp
